[#1] feat : step 분리를 위한 name 추가

--- a/.github/workflows/others.yml
+++ b/.github/workflows/others.yml
@@ -19,6 +19,8 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Gradle build
+      - name: Setup gradle
       - uses: gradle/gradle-build-action@v2
+
+      - name: Grable build
         run: ./gradlew build
