--- a/.github/workflows/others.yml
+++ b/.github/workflows/others.yml
@@ -14,13 +14,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup java
-      - uses: actions/setup-java@v3
+        uses: actions/setup-java@v3
       - with:
           distribution: 'temurin'
           java-version: '17'
 
       - name: Setup gradle
-      - uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v2
 
       - name: Grable build
         run: ./gradlew build
