--- a/.github/workflows/others.yml
+++ b/.github/workflows/others.yml
@@ -2,7 +2,7 @@ name: workflow for other branchs
 on:
   push:
     branches:
-      - feature/*
+      - feature
       - fix
       - chore
       - hotfix
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v2
 
       - name: Setup java
