--- a/.github/workflows/others.yml
+++ b/.github/workflows/others.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Setup java
         uses: actions/setup-java@v3
-      - with:
+        with:
           distribution: 'temurin'
           java-version: '17'
 
