--- a/.github/workflows/others.yml
+++ b/.github/workflows/others.yml
@@ -23,5 +23,8 @@ jobs:
       - name: Setup gradle
         uses: gradle/gradle-build-action@v2
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Grable build
         run: ./gradlew build
