--- a/.github/workflows/others.yml
+++ b/.github/workflows/others.yml
@@ -1,4 +1,4 @@
-name: workflow for other branchs
+name: workflow for other branches
 on:
   push:
     branches:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
