--- a/.github/workflows/others.yml
+++ b/.github/workflows/others.yml
@@ -2,7 +2,7 @@ name: workflow for other branchs
 on:
   push:
     branches:
-      - feature
+      - feature/*
       - fix
       - chore
       - hotfix
