--- a/.github/workflows/others.yml
+++ b/.github/workflows/others.yml
@@ -1,11 +1,11 @@
-name: workflow for other branchs
+name: workflow for other branches
 on:
   push:
     branches:
       - feature/*
-      - fix
-      - chore
-      - hotfix
+      - fix/*
+      - chore/*
+      - hotfix/*
 
 jobs:
   build:
