--- a/.github/workflows/work_branch.yml
+++ b/.github/workflows/work_branch.yml
@@ -2,10 +2,11 @@ name: workflow for other branches
 on:
   push:
     branches:
-      - feature/*
+      - feat/*
       - fix/*
       - chore/*
       - hotfix/*
+      - refactor/*
 
 jobs:
   build:
