chore: branch명 변경   - fork pr의 merge target은 develop이기 때문에 branch명을 develop으로 설정

--- a/.github/workflows/fork_work_branch.yml
+++ b/.github/workflows/fork_work_branch.yml
@@ -2,11 +2,7 @@ name: workflow for work branch from fork
 on:
   pull_request:
     branches:
-      - feat/*
-      - fix/*
-      - chore/*
-      - hotfix/*
-      - refactor/*
+      - develop
 
 jobs:
   build:
